--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,68 +1,110 @@
-﻿<!DOCTYPE HTML><html lang="zh-CN"      xmlns="http://www.w3.org/1999/xhtml"      xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="zh">
 <head>
-<meta charset="utf-8">
-<meta name="renderer" content="webkit|ie-comp|ie-stand">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-<meta http-equiv="Cache-Control" content="no-siteapp" />
-<!--[if lt IE 9]>
-<script type="text/javascript" src="/public/html5shiv.js" th:src="@{/html5shiv.js}"></script>
-<script type="text/javascript" src="/public/respond.min.js" th:src="@{/respond.min.js}"></script>
-<![endif]-->
-<link href="/static/h-ui/css/H-ui.min.css" th:href="@{/h-ui/css/H-ui.min.css}" rel="stylesheet" type="text/css" />
-<link href="static/h-ui.admin/css/H-ui.login.css" rel="stylesheet" type="text/css" />
-<link href="/static/h-ui.admin/css/style.css" th:href="@{/h-ui.admin/css/style.css}" rel="stylesheet" type="text/css" />
-<link href="/public/Hui-iconfont/1.0.8/iconfont.css" th:href="@{/Hui-iconfont/1.0.8/iconfont.css}" rel="stylesheet" type="text/css" />
-<!--[if IE 6]>
-<script type="text/javascript" src="/public/DD_belatedPNG_0.0.8a-min.js" th:src="@{/DD_belatedPNG_0.0.8a-min.js}" ></script>
-<script>DD_belatedPNG.fix('*');</script>
-<![endif]-->
-<title>后台登录 - H-ui.admin v3.1</title>
-<meta name="keywords" content="H-ui.admin v3.1,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-<meta name="description" content="H-ui.admin v3.1，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>演示：jQuery+CSS3仿google登录界面</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-<input type="hidden" id="TenantId" name="TenantId" value="" />
-<div class="header"></div>
-<div class="loginWraper">
-  <div id="loginform" class="loginBox">
-    <form class="form form-horizontal" action="index.html" method="post">
-      <div class="row cl">
-        <label class="form-label col-xs-3"><i class="Hui-iconfont">&#xe60d;</i></label>
-        <div class="formControls col-xs-8">
-          <input id="" name="" type="text" placeholder="账户" class="input-text size-L">
+<div class="htmleaf-container">
+    <div class="wrapper">
+        <div class="container">
+            <h1>Welcome</h1>
+
+            <form class="form" action="/login" method="post" id="myForm">
+                <input type="text" placeholder="Username" name="username">
+                <input type="password" placeholder="Password" name="password">
+                <button type="submit" id="login-button">Login</button>
+            </form>
         </div>
-      </div>
-      <div class="row cl">
-        <label class="form-label col-xs-3"><i class="Hui-iconfont">&#xe60e;</i></label>
-        <div class="formControls col-xs-8">
-          <input id="" name="" type="password" placeholder="密码" class="input-text size-L">
-        </div>
-      </div>
-      <div class="row cl">
-        <div class="formControls col-xs-8 col-xs-offset-3">
-          <input class="input-text size-L" type="text" placeholder="验证码" onblur="if(this.value==''){this.value='验证码:'}" onclick="if(this.value=='验证码:'){this.value='';}" value="验证码:" style="width:150px;">
-          <img src=""> <a id="kanbuq" href="javascript:;">看不清，换一张</a> </div>
-      </div>
-      <div class="row cl">
-        <div class="formControls col-xs-8 col-xs-offset-3">
-          <label for="online">
-            <input type="checkbox" name="online" id="online" value="">
-            使我保持登录状态</label>
-        </div>
-      </div>
-      <div class="row cl">
-        <div class="formControls col-xs-8 col-xs-offset-3">
-          <input name="" type="submit" class="btn btn-success radius size-L" value="&nbsp;登&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp;">
-          <input name="" type="reset" class="btn btn-default radius size-L" value="&nbsp;取&nbsp;&nbsp;&nbsp;&nbsp;消&nbsp;">
-        </div>
-      </div>
-    </form>
-  </div>
+
+        <ul class="bg-bubbles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 </div>
-<div class="footer">第五组登录界面 v1.0</div>
-<script type="text/javascript" src="/public/jquery/1.9.1/jquery.min.js" th:src="@{/jquery/1.9.1/jquery.min.js}"></script>
-<script type="text/javascript" src="/static/h-ui/js/H-ui.min.js" th:src="@{/h-ui/js/H-ui.min.js}"></script>
+
+<script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
+<script>
+    $('#login-button').click(function (event) {
+        event.preventDefault();
+        $('form').fadeOut(500);
+        $('.wrapper').addClass('form-success');
+        document.getElementById("myForm").submit();
+    });
+</script>
 
 </body>
 </html>
+
+
+<!-- 以下是统计及其他信息，与演示无关，不必理会 -->
+
+<p class="vad">
+    <a href="http://www.sucaihuo.com/" target="_blank">冀永光</a>
+    <a href="http://www.sucaihuo.com/js/415.html" target="_blank">高辰</a>
+    <a href="http://www.sucaihuo.com/js/415.html" target="_blank">闫文强</a>
+    <a href="http://www.sucaihuo.com/js/415.html" target="_blank">李晓津</a>
+    <a href="http://www.sucaihuo.com/js/415.html" target="_blank">张力文</a>
+</p>
+<style type="text/css">
+    .vad {
+        margin: 450px 0 5px;
+        font-family: Consolas, arial, 宋体, sans-serif;
+        text-align: center;
+    }
+
+    .vad a {
+        display: inline-block;
+        height: 36px;
+        line-height: 36px;
+        margin: 0 5px;
+        padding: 0 50px;
+        font-size: 14px;
+        text-align: center;
+        color: #eee;
+        text-decoration: none;
+        background-color: #222;
+    }
+
+    .vad a:hover {
+        color: #fff;
+        background-color: #000;
+    }
+
+    .thead {
+        width: 728px;
+        height: 90px;
+        margin: 0 auto;
+        border-bottom: 40px solid #fff;
+    }
+</style>
+
+
+<div style="width:1100px;margin:12px auto" class="clearfix">
+    <div style="width:700px;float:left">
+        <script type="text/javascript">
+            /*700*90 创建于 2015-06-27*/
+            var cpro_id = "u2176575";
+        </script>
+        <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+    </div>
+    <div style="width:400px;float:left">
+        <script type="text/javascript">
+            /*400*90 创建于 2015-06-27*/
+            var cpro_id = "u2176586";
+        </script>
+        <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+    </div>
+</div>
