--- a/src/main/resources/templates/system-dictionary-edit.html
+++ b/src/main/resources/templates/system-dictionary-edit.html
@@ -1,134 +1,191 @@
 <!--_meta 作为公共模版分离出去-->
-<!DOCTYPE HTML><html lang="zh-CN"      xmlns="http://www.w3.org/1999/xhtml"      xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html lang="zh-CN" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-<meta name="renderer" content="webkit|ie-comp|ie-stand">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-<meta http-equiv="Cache-Control" content="no-siteapp" />
-<link rel="Bookmark" href="/favicon.ico" >
-<link rel="Shortcut Icon" href="/favicon.ico" />
-<!--[if lt IE 9]>
-<script type="text/javascript" src="/public/html5shiv.js" th:src="@{/html5shiv.js}"></script>
-<script type="text/javascript" src="/public/respond.min.js" th:src="@{/respond.min.js}"></script>
-<![endif]-->
-<link rel="stylesheet" type="text/css" href="/static/h-ui/css/H-ui.min.css" th:href="@{/h-ui/css/H-ui.min.css}" />
-<link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/H-ui.admin.css" th:href="@{/h-ui.admin/css/H-ui.admin.css}" />
-<link rel="stylesheet" type="text/css" href="/public/Hui-iconfont/1.0.8/iconfont.css" th:href="@{/Hui-iconfont/1.0.8/iconfont.css}" />
-<link rel="stylesheet" type="text/css" href="/static/h-ui.admin/skin/default/skin.css" th:href="@{/h-ui.admin/skin/green/skin.css}" id="skin" />
-<link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/style.css" th:href="@{/h-ui.admin/css/style.css}" />
-<!--[if IE 6]>
-<script type="text/javascript" src="/public/DD_belatedPNG_0.0.8a-min.js" th:src="@{/DD_belatedPNG_0.0.8a-min.js}" ></script>
-<script>DD_belatedPNG.fix('*');</script>
-<![endif]-->
-<!--/meta 作为公共模版分离出去-->
+    <head>
+        <meta charset="utf-8">
+        <meta name="renderer" content="webkit|ie-comp|ie-stand">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport"
+              content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+        <meta http-equiv="Cache-Control" content="no-siteapp"/>
+        <link rel="Bookmark" href="/favicon.ico">
+        <link rel="Shortcut Icon" href="/favicon.ico"/>
+        <!--[if lt IE 9]>
+        <script type="text/javascript" src="/public/html5shiv.js" th:src="@{/html5shiv.js}"></script>
+        <script type="text/javascript" src="/public/respond.min.js" th:src="@{/respond.min.js}"></script>
+        <![endif]-->
+        <link rel="stylesheet" type="text/css" href="/static/h-ui/css/H-ui.min.css"
+              th:href="@{/h-ui/css/H-ui.min.css}"/>
+        <link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/H-ui.admin.css"
+              th:href="@{/h-ui.admin/css/H-ui.admin.css}"/>
+        <link rel="stylesheet" type="text/css" href="/public/Hui-iconfont/1.0.8/iconfont.css"
+              th:href="@{/Hui-iconfont/1.0.8/iconfont.css}"/>
+        <link rel="stylesheet" type="text/css" href="/static/h-ui.admin/skin/default/skin.css"
+              th:href="@{/h-ui.admin/skin/green/skin.css}" id="skin"/>
+        <link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/style.css"
+              th:href="@{/h-ui.admin/css/style.css}"/>
+        <!--[if IE 6]>
+        <script type="text/javascript" src="/public/DD_belatedPNG_0.0.8a-min.js"
+                th:src="@{/DD_belatedPNG_0.0.8a-min.js}"></script>
+        <script>DD_belatedPNG.fix('*');</script>
+        <![endif]-->
+        <!--/meta 作为公共模版分离出去-->
 
-<title>编辑字典 - H-ui.admin v3.1</title>
-<meta name="keywords" content="H-ui.admin v3.1,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-<meta name="description" content="H-ui.admin v3.1，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
-</head>
-<title>编辑字典条目</title>
+        <title>编辑字典 - H-ui.admin v3.1</title>
+        <meta name="keywords" content="H-ui.admin v3.1,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
+        <meta name="description" content="H-ui.admin v3.1，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
+    </head>
+    <title>编辑字典条目</title>
 </head>
 <body>
 
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 基础数据 <span class="c-gray en">&gt;</span> 数据字典管理 <span class="c-gray en">&gt;</span> 编辑字典条目   <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 基础数据 <span
+        class="c-gray en">&gt;</span> 数据字典管理 <span class="c-gray en">&gt;</span> 新建字典条目 <a
+        class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px"
+        href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 
 <article class="page-container">
-	<form action="" method="post" class="form form-horizontal" id="form-member-add">
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">编号：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				9
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>类别：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="category" name="category">
-			</div>
-		</div>
-		
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>条目：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="entry" name="entry">
-			</div>
-		</div>
-		
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>值：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="value" name="value">
-			</div>
-		</div>
 
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">是否可编辑：</label>
-			<div class="formControls col-xs-8 col-sm-9 skin-minimal">
-				<div class="check-box">
-					<input type="checkbox" id="checkbox-1">
-					<label for="checkbox-1">&nbsp;</label>
-				</div>
-			</div>
-		</div>
-		
-		
-		<div class="row cl">
-			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
-				<input class="btn btn-primary radius" type="submit" value="&nbsp;&nbsp;保存&nbsp;&nbsp;">
-			  <a class="btn btn-default radius" type="button" href="javascript:window.location.href ='system-dictionary.html'">返回数据字典界面</a>
-			</div>
-		</div>
-	</form>
+
+    <form action="" method="post" class="form form-horizontal" id="form-member-add">
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-2">编号：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                9
+            </div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>类别：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class=" auto-inp" id="input" name="category">
+                <div class="auto hidden" id="auto">
+                    <div class="auto_out">1</div>
+                    <div class="auto_out">2</div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>条目：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" value="" placeholder="" id="entry" name="entry">
+            </div>
+        </div>
+
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>值：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" value="" placeholder="" id="value" name="value">
+            </div>
+        </div>
+
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-2">是否可编辑：</label>
+            <div class="formControls col-xs-8 col-sm-9 skin-minimal">
+                <div class="check-box">
+                    <input type="checkbox" id="checkbox-1">
+                    <label for="checkbox-1">&nbsp;</label>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row cl">
+            <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
+                <input class="btn btn-primary radius" type="submit" value="&nbsp;&nbsp;保存&nbsp;&nbsp;">
+                <a class="btn btn-default radius" type="button"
+                   href="javascript:window.location.href ='system-dictionary.html'">返回数据字典界面</a>
+            </div>
+        </div>
+    </form>
+
+
 </article>
-
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" src="/public/jquery/1.9.1/jquery.min.js" th:src="@{/jquery/1.9.1/jquery.min.js}"></script>
+<script type="text/javascript" src="/public/jquery/1.9.1/jquery.min.js"
+        th:src="@{/jquery/1.9.1/jquery.min.js}"></script>
 <script type="text/javascript" src="/public/layer/2.4/layer.js" th:src="@{/layer/2.4/layer.js}"></script>
 <script type="text/javascript" src="/static/h-ui/js/H-ui.min.js" th:src="@{/h-ui/js/H-ui.min.js}"></script>
-<script type="text/javascript" src="/static/h-ui.admin/js/H-ui.admin.js" th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script> <!--/_footer 作为公共模版分离出去-->
+<script type="text/javascript" src="/static/h-ui.admin/js/H-ui.admin.js"
+        th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script> <!--/_footer 作为公共模版分离出去-->
 
-<!--请在下方写此页面业务相关的脚本--> 
-<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js" th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/jquery.validate.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/validate-methods.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/messages_zh.js"></script>
+<!--请在下方写此页面业务相关的脚本-->
+<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js"
+        th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js"
+        th:src="@{/datatables/1.10.0/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" src="public/laypage/1.2/laypage.js" th:src="@{/laypage/1.2/laypage.js}"></script>
+<script type="text/javascript" src="public/auto/auto.js" th:src="@{/auto/auto.js}"></script>
 <script type="text/javascript">
-$(function(){
-	$('.skin-minimal input').iCheck({
-		checkboxClass: 'icheckbox-blue',
-		radioClass: 'iradio-blue',
-		increaseArea: '20%'
-	});
-	
-	$("#form-member-add").validate({
-		rules:{
-			category:{
-				required:true,
-				
-			},
-			entry:{
-				required:true,
-			},
-			value:{
-				required:true,
-				
-			},
-		
-			
-		},
-		onkeyup:false,
-		focusCleanup:true,
-		success:"valid",
-		submitHandler:function(form){
-			//$(form).ajaxSubmit();
-			var index = parent.layer.getFrameIndex(window.name);
-			//parent.$('.btn-refresh').click();
-			parent.layer.close(index);
-		}
-	});
-});
-</script> 
+    var array = ['七里香', 'b0', 'b12', 'b22', 'b3', 'b4', 'b5', 'b6', '如果爱', 'b7', 'b8', 'b2', 'abd', 'ab', 'acd', 'accd', 'abd', 'qq音乐', 'b1', 'cd', 'ccd', 'cbcv', '小王子', 'cxf', 'b0'];
+    var autoComplete = new AutoComplete("input", "auto", array);
+    document.getElementById("input").onkeyup = function (event) {
+        autoComplete.start(event);
+    }
+
+    <!-- ......ajax读取数据库......-->
+
+    $(document).ready(function () {
+        $.ajax({
+            url: "newsservlet",//请求地址
+            dataType: "json",//数据格式
+            type: "post",//请求方式
+            async: false,//是否异步请求
+            success: function (data) {   //如何发送成功
+                var html = "";
+                for (var i = 0; i < data.length; i++) {    //遍历data数组
+                    var ls = data[i];
+                    html += "<li><a href='second page text.html?newsid=" + ls.news_id + "'class='infNews_wrod_a'><span>" + ls.news_name + "</span></a><span class='date'>" + ls.news_time + "</span></li>";
+                }
+                $("#ulul").html(html); //在html页面id=ulul的标签里显示html内容
+            },
+        })
+    })
+    <!-- ......              ......-->
+
+
+    $(function () {
+        $('.skin-minimal input').iCheck({
+            checkboxClass: 'icheckbox-blue',
+            radioClass: 'iradio-blue',
+            increaseArea: '20%'
+        });
+
+        $("#form-member-add").validate({
+            rules: {
+                category: {
+                    required: true,
+
+                },
+                entry: {
+                    required: true,
+                },
+                value: {
+                    required: true,
+
+                },
+
+
+            },
+            onkeyup: false,
+            focusCleanup: true,
+            success: "valid",
+            submitHandler: function (form) {
+                //$(form).ajaxSubmit();
+                var index = parent.layer.getFrameIndex(window.name);
+                //parent.$('.btn-refresh').click();
+                parent.layer.close(index);
+            }
+        });
+    });
+</script>
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
 </html>
