base data function compile finished

--- a/src/main/resources/templates/system-dictionary-add.html
+++ b/src/main/resources/templates/system-dictionary-add.html
@@ -48,30 +48,23 @@
 <article class="page-container">
 
 
-    <form action="" method="post" class="form form-horizontal" id="form-member-add">
+    <form action="/data/add" method="get" class="form form-horizontal" id="form-member-add">
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-2">编号：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" value="" placeholder="" id="id" name="id">
+                <input type="text" class="input-text" value="" placeholder="" id="id" name="dataNumber"  style="width: 150px">
             </div>
         </div>
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>类别：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class=" auto-inp" id="input" name="category">
+                <input type="text" class="input-text" id="kind" name="kind" style="width: 150px">
                 <div class="auto hidden" id="auto">
                     <div class="auto_out">1</div>
                     <div class="auto_out">2</div>
                 </div>
             </div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>条目：</label>
             <div class="formControls col-xs-8 col-sm-9">
@@ -90,7 +83,7 @@
             <label class="form-label col-xs-4 col-sm-2">是否可编辑：</label>
             <div class="formControls col-xs-8 col-sm-9 skin-minimal">
                 <div class="check-box">
-                    <input type="checkbox" id="checkbox-1">
+                    <input type="checkbox" id="checkbox-1" name="checkbox">
                     <label for="checkbox-1">&nbsp;</label>
                 </div>
             </div>
@@ -100,8 +93,7 @@
         <div class="row cl">
             <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
                 <input class="btn btn-primary radius" type="submit" value="&nbsp;&nbsp;保存&nbsp;&nbsp;">
-                <a class="btn btn-default radius" type="button"
-                   href="javascript:window.location.href ='system-dictionary.html'">返回数据字典界面</a>
+                <a class="btn btn-default radius" th:href="@{/data/dictionarys}">返回数据字典界面</a>
             </div>
         </div>
     </form>
