--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -154,12 +154,11 @@
             <dt><i class="Hui-iconfont">&#xe62e;</i> 基础数据<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-
-                    <li><a data-href="system-dictionary.html" data-title="数据字典管理" href="javascript:void(0)"><i
+                    <li><a data-href="/data/dictionarys" data-title="数据字典管理" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe6ec;</i>数据字典管理</a></li>
-                    <li><a data-href="system-product.html" data-title="查询产品信息" href="javascript:void(0)"><i
+                    <li><a data-href="/product/details" data-title="查询产品信息" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe6c6;</i>查询产品信息</a></li>
-                    <li><a data-href="system-search.html" data-title="查询库存" href="javascript:void(0)"><i
+                    <li><a data-href="/product/inventorys" data-title="查询库存" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe669;</i>查询库存</a></li>
                 </ul>
             </dd>
