--- a/src/main/resources/templates/system-dictionary.html
+++ b/src/main/resources/templates/system-dictionary.html
@@ -1,129 +1,173 @@
-﻿<!DOCTYPE HTML><html lang="zh-CN"      xmlns="http://www.w3.org/1999/xhtml"      xmlns:th="http://www.thymeleaf.org">
+﻿<!DOCTYPE HTML>
+<html lang="zh-CN" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-<meta name="renderer" content="webkit|ie-comp|ie-stand">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-<meta http-equiv="Cache-Control" content="no-siteapp" />
-<!--[if lt IE 9]>
-<script type="text/javascript" src="/public/html5shiv.js" th:src="@{/html5shiv.js}"></script>
-<script type="text/javascript" src="/public/respond.min.js" th:src="@{/respond.min.js}"></script>
-<![endif]-->
-<link rel="stylesheet" type="text/css" href="/static/h-ui/css/H-ui.min.css" th:href="@{/h-ui/css/H-ui.min.css}" />
-<link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/H-ui.admin.css" th:href="@{/h-ui.admin/css/H-ui.admin.css}" />
-<link rel="stylesheet" type="text/css" href="/public/Hui-iconfont/1.0.8/iconfont.css" th:href="@{/Hui-iconfont/1.0.8/iconfont.css}" />
-<link rel="stylesheet" type="text/css" href="/static/h-ui.admin/skin/default/skin.css" th:href="@{/h-ui.admin/skin/green/skin.css}" id="skin" />
-<link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/style.css" th:href="@{/h-ui.admin/css/style.css}" />
-<!--[if IE 6]>
-<script type="text/javascript" src="/public/DD_belatedPNG_0.0.8a-min.js" th:src="@{/DD_belatedPNG_0.0.8a-min.js}" ></script>
-<script>DD_belatedPNG.fix('*');</script>
-<![endif]-->
-<title>数据字典</title>
+    <meta charset="utf-8">
+    <meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <!--[if lt IE 9]>
+    <script type="text/javascript" src="/public/html5shiv.js" th:src="@{/html5shiv.js}"></script>
+    <script type="text/javascript" src="/public/respond.min.js" th:src="@{/respond.min.js}"></script>
+    <![endif]-->
+    <link rel="stylesheet" type="text/css" href="/static/h-ui/css/H-ui.min.css" th:href="@{/h-ui/css/H-ui.min.css}"/>
+    <link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/H-ui.admin.css"
+          th:href="@{/h-ui.admin/css/H-ui.admin.css}"/>
+    <link rel="stylesheet" type="text/css" href="/public/Hui-iconfont/1.0.8/iconfont.css"
+          th:href="@{/Hui-iconfont/1.0.8/iconfont.css}"/>
+    <link rel="stylesheet" type="text/css" href="/static/h-ui.admin/skin/default/skin.css"
+          th:href="@{/h-ui.admin/skin/green/skin.css}" id="skin"/>
+    <link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/style.css"
+          th:href="@{/h-ui.admin/css/style.css}"/>
+    <!--[if IE 6]>
+    <script type="text/javascript" src="/public/DD_belatedPNG_0.0.8a-min.js"
+            th:src="@{/DD_belatedPNG_0.0.8a-min.js}"></script>
+    <script>DD_belatedPNG.fix('*');</script>
+    <![endif]-->
+    <title>数据字典</title>
 </head>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页
-	<span class="c-gray en">&gt;</span>
-	系统管理
-	<span class="c-gray en">&gt;</span>
-	数据字典
-	<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a>
+    <span class="c-gray en">&gt;</span>
+    系统管理
+    <span class="c-gray en">&gt;</span>
+    数据字典
+    <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px"
+       href="javascript:location.replace(location.href);" title="刷新"><i class="Hui-iconfont">&#xe68f;</i></a>
 </nav>
 <div class="page-container">
-<form class="Huiform" method="post" action="" target="_self">
-	<div class="text-c"> 类别:
-		<input type="text" class="input-text" id="" name="" style="width:150px">
-		条目:
-		<input type="text" class="input-text" id="" name="" style="width:150px">
-		值:
-		<input type="text" class="input-text" id="" name="" style="width:150px">
-		
-		<button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 查询</button>
-		</form >
-	</div>
-	<div class="cl pd-5 bg-1 bk-gray mt-20">
+    <form class="Huiform" method="get" action="/data/dictionary/search" target="_self">
+        <div class="text-c"> 类别:
+            <input type="text" class="input-text" id="" name="kind" style="width:150px">
+            条目:
+            <input type="text" class="input-text" id="" name="entry" style="width:150px">
+            值:
+            <input type="text" class="input-text" id="" name="value" style="width:150px">
+
+            <button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 查询</button>
+    </form>
+</div>
+<div class="cl pd-5 bg-1 bk-gray mt-20">
 		<span class="l">
-		<a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a>
-		<a class="btn btn-primary radius" data-title="新建字典条目" data-href="opportunity-add.html" onclick="system_data_edit('','system-dictionary-add.html')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 新建字典条目</a></span>
-		</span>
-		<span class="r">共有数据：<strong>54</strong> 条</span>
-	</div>
-	<div class="mt-20">
-		<table class="table table-border table-bordered table-bg table-hover table-sort">
-			<thead>
-				<tr class="text-c">
-					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">编号</th>
-					<th width="105">类别</th>
-					<th width="105">条目</th>
-					<th width="105">值</th>
-					<th width="105">是否可编辑</th>
-					<th width="100">操作</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>0001</td>
-					<td>城市</td>
-					<td>city</td>
-					<td>city</td>
-					<td>是</td>
-					<td class="f-14"><a style="text-decoration:none" onclick="system_data_edit('','system-dictionary-edit.html')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i>编辑</a>
-						<a title="删除" href="javascript:;" onclick="system_data_del(this,'10001')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i>删除</a></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+		<a class="btn btn-primary radius" data-title="新建字典条目" data-href="/data/add"
+           onclick="system_data_add('','/data/page/add')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 新建字典条目</a></span>
+    </span>
+</div>
+<div class="mt-20">
+    <table class="table table-border table-bordered table-bg table-hover table-sort">
+        <thead>
+        <tr class="text-c">
+            <th width="25"><input type="checkbox" name="" value=""></th>
+            <th width="80">编号</th>
+            <th width="105">类别</th>
+            <th width="105">条目</th>
+            <th width="105">值</th>
+            <th width="105">是否可编辑</th>
+            <th width="100">操作</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="text-c" th:each="dataDictionarie:${dataDictionaries}">
+            <td><input type="checkbox" value="" name=""></td>
+            <td th:text="${dataDictionarie.getId()}">0001</td>
+            <td th:text="${dataDictionarie.getKind()}">城市</td>
+            <td th:text="${dataDictionarie.getEntry()}">city</td>
+            <td th:text="${dataDictionarie.getValue()}">city</td>
+            <div th:if="${dataDictionarie.getEditable() eq 0}">
+                <td>是</td>
+            </div>
+            <div th:if="${dataDictionarie.getEditable() eq 1}">
+                <td>否</td>
+            </div>
+            <div th:if="${dataDictionarie.getEditable() eq 0}">
+                <td class="f-14">
+                    <a style="text-decoration:none" href="javascript:;" title="编辑"
+                       th:onclick="'javascript:system_data_edit(\''+1+'\',\''+${dataDictionarie.getId()}+'\')'">
+                        <i class="Hui-iconfont">&#xe6df;</i>编辑
+                    </a>
+                    <a title="删除" href="javascript:void(0);"
+                       th:onclick="'javascript:system_data_del(this.parentNode,\''+${dataDictionarie.getId()}+'\')'"
+                       class="ml-5"
+                       style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i>删除</a>
+                </td>
+            </div>
+            <div th:if="${dataDictionarie.getEditable() eq 1}">
+                <td class="f-14">
+                    <a style="text-decoration:none" onclick="system_data_edit('','system-dictionary-edit.html')"
+                       href="javascript:;" title="编辑"></a>
+                    <a title="删除" href="javascript:;" onclick="system_data_del(this,'10001')" class="ml-5"
+                       style="text-decoration:none"></a>
+                </td>
+            </div>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </div>
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" src="/public/jquery/1.9.1/jquery.min.js" th:src="@{/jquery/1.9.1/jquery.min.js}"></script>
+<script type="text/javascript" src="/public/jquery/1.9.1/jquery.min.js"
+        th:src="@{/jquery/1.9.1/jquery.min.js}"></script>
 <script type="text/javascript" src="/public/layer/2.4/layer.js" th:src="@{/layer/2.4/layer.js}"></script>
 <script type="text/javascript" src="/static/h-ui/js/H-ui.min.js" th:src="@{/h-ui/js/H-ui.min.js}"></script>
-<script type="text/javascript" src="/static/h-ui.admin/js/H-ui.admin.js" th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script> <!--/_footer 作为公共模版分离出去-->
+<script type="text/javascript" src="/static/h-ui.admin/js/H-ui.admin.js"
+        th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script> <!--/_footer 作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js" th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
-<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js" th:src="@{/datatables/1.10.0/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js"
+        th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js"
+        th:src="@{/datatables/1.10.0/jquery.dataTables.min.js}"></script>
 <script type="text/javascript" src="public/laypage/1.2/laypage.js" th:src="@{/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
-$('.table-sort').dataTable({
-	"aaSorting": [
-	    [ 1, "desc" ]
-	],//默认第几个排序
-	"bStateSave": true,//状态保存
-	"aoColumnDefs": [
-	  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-	  {"orderable":false,"aTargets":[0,6]}// 制定列不参与排序
-	]
-});
+    $('.table-sort').dataTable({
+        "aaSorting": [
+            [1, "desc"]
+        ],//默认第几个排序
+        "bStateSave": true,//状态保存
+        "aoColumnDefs": [
+            //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
+            {"orderable": false, "aTargets": [0, 6]}// 制定列不参与排序
+        ]
+    });
 
-/*数据字典-编辑*/
-function system_data_edit(title,url,w,h){
-	var index = layer.open({
-		type: 2,
-		title: title,
-		content: url
-	});
-	layer.full(index);
-}
+    /*数据字典-编辑*/
+    function system_data_edit(title, uri, w, h) {
+        var url = '/data/edit?id=' + uri
+        var index = layer.open({
+            type: 2,
+            title: '',
+            content: url
+        });
+        layer.full(index);
+    }
 
-/*数据字典-删除*/
-function system_data_del(obj,id){
-	layer.confirm('确认要删除吗？',function(index){
-		$.ajax({
-			type: 'POST',
-			url: '',
-			dataType: 'json',
-			success: function(data){
-				$(obj).parents("tr").remove();
-				layer.msg('已删除!',{icon:1,time:1000});
-			},
-			error:function(data) {
-				console.log(data.msg);
-			},
-		});
-	});
-}
+    function system_data_add(title, uri, w, h) {
+        var index = layer.open({
+            type: 2,
+            title: '',
+            content: uri
+        });
+        layer.full(index);
+    }
+
+    /*数据字典-删除*/
+    function system_data_del(obj, id) {
+        layer.confirm('确认要删除吗？', function (index) {
+            $.ajax({
+                type: 'GET',
+                url: '/data/delete?id=' + id,
+                dataType: 'json',
+                success: function (data) {
+                    $(obj).parent("tr").remove();
+                    layer.msg('已删除!', {icon: 1, time: 1000});
+                },
+                error: function (data) {
+                    console.log(data.msg);
+                },
+            });
+        });
+    }
 </script>
 </body>
 </html>
