--- a/src/main/resources/templates/sales-opportunity-add.html
+++ b/src/main/resources/templates/sales-opportunity-add.html
@@ -29,7 +29,8 @@
 </head>
 <body>
 <article class="page-container">
-	<form th:action="@{/sale/opportunity/create}" class="form form-horizontal" id="form-article-add" method="post" >
+	<!--id="form-article-add"-->
+	<form th:action="@{/sale/opportunity/create}" class="form form-horizontal"  method="post" >
 	
 	<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">编号：</label>
