--- a/src/main/resources/templates/customer-develop.html
+++ b/src/main/resources/templates/customer-develop.html
@@ -73,11 +73,12 @@
 					<td th:text="${allSale.summary}"></td>
 					<td th:text="${allSale.contact}"></td>
 					<td th:text="${allSale.contactPhone}"></td>
-					<td th:text="${allSale.createTime}"></td>
+					<td th:text="${#dates.format(allSale.createTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
 					<div th:switch="${allSale.status}">
 						<td th:case="1" class="td-status"><span class="label  radius">未指派</span></td>
-						<td th:case="*" class="td-status"><span class="label label-success radius">已指派</span></td>
-						<td th:case="" class="td-status"><span class="label  radius">已指派</span></td>
+						<td th:case="0" class="td-status"><span class="label label-success radius">已指派</span></td>
+						<td th:case="2" class="td-status"><span class="label label-secondary radius">开发成功</span></td>
+						<td th:case="3" class="td-status"><span class="label  label-danger radius">开发失败</span></td>
 					</div>
 					<td class="f-14 td-manage">
 						<a  class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;"
