--- a/src/main/resources/templates/sales-opportunity.html
+++ b/src/main/resources/templates/sales-opportunity.html
@@ -38,11 +38,6 @@
         <div class="text-c">
             <button onclick="removeIframe()" class="btn btn-primary radius">关闭选项卡</button>
             <span class="select-box inline">
-		<select name="" class="select">
-			<option value="0">全部分类</option>
-			<option value="1">分类一</option>
-			<option value="2">分类二</option>
-		</select>
 		</span> 日期范围：
             <input type="text" onfocus="WdatePicker({ maxDate:'#F{$dp.$D(\'logmax\')||\'%y-%M-%d\'}' })" id="logmin"
                    class="input-text Wdate" style="width:120px;">
@@ -81,14 +76,11 @@
             <td th:text="${allSale.summary}"></td>
             <td th:text="${allSale.contact}"></td>
             <td th:text="${allSale.contactPhone}"></td>
-            <td th:text="${allSale.createTime}"></td>
+            <td th:text="${#dates.format(allSale.createTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
             <div th:switch="${allSale.status}">
                 <td th:case="1" class="td-status"><span class="label  radius">未指派</span></td>
                 <td th:case="*" class="td-status"><span class="label  radius">已指派</span></td>
                 <td th:case="" class="td-status"><span class="label  radius">已指派</span></td>
-                <!--<p th:case="'0'">User is an administrator</p>-->
-                <!--<p th:case="1">User is a manager</p>-->
-                <!--<p th:case="2">User is some other thing</p>-->
             </div>
             <td class="f-14 td-manage"><a class="ml-5" style="text-decoration:none"
                                           onClick="article_edit('','sales-opportunity-dispatch.html')" th:href="@{/assign/{id}(id=${allSale.id})}"
