:construction: 剩余时间查询的修复。

--- a/src/main/resources/templates/sales-opportunity-add.html
+++ b/src/main/resources/templates/sales-opportunity-add.html
@@ -32,12 +32,12 @@
 	<!--id="form-article-add"-->
 	<form th:action="@{/sale/opportunity/create}" class="form form-horizontal"  method="post" >
 	
-	<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">编号：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-					<input type="text" class="input-text" readonly="true" value="001" placeholder="" id="sid" name="number">
-			</div>
-		</div>
+	<!--<div class="row cl">-->
+			<!--<label class="form-label col-xs-4 col-sm-2">编号：</label>-->
+			<!--<div class="formControls col-xs-8 col-sm-9">-->
+					<!--<input type="text" class="input-text" readonly="true" value="001" placeholder="" id="sid" name="number">-->
+			<!--</div>-->
+		<!--</div>-->
 	
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">机会来源：</label>
