--- a/src/main/resources/templates/sales-opportunity-edit.html
+++ b/src/main/resources/templates/sales-opportunity-edit.html
@@ -110,7 +110,12 @@
 		<div class="row cl">
 			<label  class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>指派给：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input th:value="${allSale.owner}" type="text" class="input-text" value=""  placeholder="" id="dispatcher" name="owner">
+				<!--<input th:value="${allSale.owner}" type="text" class="input-text" value=""  placeholder="" id="dispatcher" name="owner">-->
+				<select class="select" size="1" id="dispatcher" name="owner">
+					<option value=""> -- </option>
+					<option value="" th:each="allEmpl : ${allEmployee}" th:value="${allEmpl}" th:text="${allEmpl}">
+					</option>
+				</select>
 			</div>
 		</div>
 		<div class="row cl">
