--- a/src/main/resources/templates/sales-opportunity.html
+++ b/src/main/resources/templates/sales-opportunity.html
@@ -39,6 +39,7 @@
             <button onclick="removeIframe()" class="btn btn-primary radius">关闭选项卡</button>
             <span class="select-box inline">
 		</span> 日期范围：
+            <input type="hidden" name="status" value="0">
             <input name="timePara1" type="text" onfocus="WdatePicker({ maxDate:'#F{$dp.$D(\'logmax\')||\'%y-%M-%d\'}' })" id="logmin"
                    class="input-text Wdate" style="width:120px;">
             -
