--- a/src/main/resources/templates/customer-develop-createplan.html
+++ b/src/main/resources/templates/customer-develop-createplan.html
@@ -127,7 +127,7 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-1"><span class="c-red">*</span>日期：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="date " name="createTime">
+				<input type="text" value="" placeholder="" name="createTime" onfocus="WdatePicker({ maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}' })" id="datemin" class="input-text Wdate" >
 			</div>
 		</div>
 
@@ -269,6 +269,7 @@
 <script type="text/javascript" src="public/ueditor/1.4.3/ueditor.config.js" th:src="@{/ueditor/1.4.3/ueditor.config.js}"></script>
 <script type="text/javascript" src="public/ueditor/1.4.3/ueditor.all.min.js" th:src="@{/ueditor/1.4.3/ueditor.all.min.js}"> </script>
 <script type="text/javascript" src="public/ueditor/1.4.3/lang/zh-cn/zh-cn.js" th:src="@{/ueditor/1.4.3/lang/zh-cn/zh-cn.js}"></script>
+			<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js" th:src="@{/datatables/1.10.0/jquery.dataTables.min.js}"></script>
 <script type="text/javascript">
 
 
