--- a/src/main/resources/templates/customer-develop.html
+++ b/src/main/resources/templates/customer-develop.html
@@ -24,7 +24,7 @@
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 营销管理 <span class="c-gray en">&gt;</span> 客户开发计划 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	<div class="text-c">
-	<form class="Huiform" method="post" action="/querySaleByTime">
+	<form class="Huiform" method="post" action="/querySaleByTimeF">
 		<input type="hidden" name="status" value="1">
 		日期范围：
 		<input name="timePara1" type="text" onfocus="WdatePicker({ maxDate:'#F{$dp.$D(\'logmax\')||\'%y-%M-%d\'}' })" id="logmin" class="input-text Wdate" style="width:120px;">
