--- a/src/main/resources/templates/sales-opportunity-edit.html
+++ b/src/main/resources/templates/sales-opportunity-edit.html
@@ -28,20 +28,22 @@
 <meta name="description" content="H-ui.admin v3.1，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
 </head>
 <body>
+<!--id="form-article-add"-->
 <article class="page-container">
-	<form class="form form-horizontal" id="form-article-add">
+	<form th:action="@{/sale/opportunity/edit}" method="post" class="form form-horizontal" >
 	
 	<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">编号：</label>
+		<input  type="hidden" th:value="${allSale.id}"  name="id" id="id">
+		<label class="form-label col-xs-4 col-sm-2">编号：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="sid" name="sid">
+				<input th:value="${allSale.number}" type="text" class="input-text" value="" placeholder="" id="sid" name="number">
 			</div>
 		</div>
 	
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">机会来源：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="opportunity" name="opportunity">
+				<input th:value="${allSale.source}" type="text" class="input-text" value="" placeholder="" id="opportunity" name="source">
 			</div>
 		</div>
 		
@@ -49,21 +51,21 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>客户名称：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="cname" name="cname">
+				<input th:value="${allSale.customerName}" type="text" class="input-text" value="" placeholder="" id="cname" name="customerName">
 			</div>
 		</div>
 		
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>成功几率：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="probability" name="probability">
+				<input th:value="${allSale.chance}" type="text" class="input-text" value="" placeholder="" id="probability" name="chance">
 			</div>
 		</div>
 		
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>概要：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="outline" name="outline">
+				<input th:value="${allSale.summary}" type="text" class="input-text" value="" placeholder="" id="outline" name="summary">
 			</div>
 		</div>
 		
@@ -71,20 +73,21 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">联系人：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="contacts" name="contacts">
+				<input th:value="${allSale.contact}" type="text" class="input-text" value="" placeholder="" id="contacts" name="contact">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">联系电话：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="tel" name="tel">
+				<input th:value="${allSale.contactPhone}" type="text" class="input-text" value="" placeholder="" id="tel" name="contactPhone">
 			</div>
 		</div>
 		
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>机会描述：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<textarea name="abstract" cols="" rows="" class="textarea"  placeholder="说点什么...最少输入10个字符" datatype="*10-100" dragonfly="true" nullmsg="备注不能为空！" onKeyUp="$.Huitextarealength(this,200)"></textarea>
+				<!--<input th:value="${allSale.opportunityDescription}">-->
+				<textarea th:text="${allSale.opportunityDescription}" name="opportunityDescription" cols="" rows="" class="textarea"  placeholder="说点什么...最少输入10个字符" datatype="*10-100" dragonfly="true" nullmsg="备注不能为空！" onKeyUp="$.Huitextarealength(this,10)"></textarea>
 				<p class="textarea-numberbar"><em class="textarea-length">0</em>/200</p>
 			</div>
 		</div>
@@ -92,33 +95,40 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>创建人：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="author" name="author">
+				<input th:value="${allSale.founder}" type="text" class="input-text" value="" placeholder="" id="author" name="founder">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>创建时间：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',maxDate:'#F{$dp.$D(\'createtime\')||\'%y-%M-%d\'}' })" id="createtime" name="createtime" class="input-text Wdate">
+				<!--<input  th:value="${allSale.createTime}" type="text"  name="createTime" class="input-text Wdate">-->
+				<!--<input th:value="${allSale.createTime}" type="text"  onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss' })" id="createtime" name="createTime" class="input-text Wdate">		-->
+				<input th:value="${#dates.format(allSale.createTime, 'yyyy-MM-dd HH:mm:ss')}" type="text"  onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss' })" id="createtime" name="createTime" class="input-text Wdate">
 			</div>
 		</div>
 
 		<div class="row cl">
 			<label  class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>指派给：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value=""  placeholder="" id="dispatcher" name="dispatcher">
+				<!--<input th:value="${allSale.owner}" type="text" class="input-text" value=""  placeholder="" id="dispatcher" name="owner">-->
+				<select class="select" size="1" id="dispatcher" name="owner">
+					<option value=""> -- </option>
+					<option value="" th:each="allEmpl : ${allEmployee}" th:value="${allEmpl}" th:text="${allEmpl}">
+					</option>
+				</select>
 			</div>
 		</div>
 		<div class="row cl">
 			<label  class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>指派时间：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text"  onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',maxDate:'#F{$dp.$D(\'dispatchtime\')||\'%y-%M-%d\'}' })" id="dispatchtime" name="dispatchtime" class="input-text Wdate">
+				<input th:value="${#dates.format(allSale.assignTime, 'yyyy-MM-dd HH:mm:ss')}" type="text"  onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss' })" id="dispatchtime" name="assignTime" class="input-text Wdate">
 			</div>
 		</div>
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
-				<button onClick="article_save_submit();" class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button>
+				<button  class="btn btn-primary radius" type="submit">保存</button>
 
-				<a class="btn btn-default radius" type="button" href="javascript:window.location.href ='sales-opportunity.html'">返回销售管理界面</a>
+				<a class="btn btn-default radius" th:href="@{/sales}" type="button" href="javascript:window.location.href ='sales-opportunity.html'">返回销售管理界面</a>
 			</div>
 		</div>
 	</form>
@@ -176,7 +186,7 @@ $(function(){
 		focusCleanup:true,
 		success:"valid",
 		submitHandler:function(form){
-			//$(form).ajaxSubmit();
+//			$(form).ajaxSubmit();
 			var index = parent.layer.getFrameIndex(window.name);
 			//parent.$('.btn-refresh').click();
 			parent.layer.close(index);
